# blog_app

./: .flake8  pyproject.toml
config/: settings.py  urls.py  yasg.py
posts/: admin.py  models.py  pagination.py  permissions.py  serializer.py  signals.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_autor_profile.py  0003_alter_profile_user_birth_date_and_more.py  0004_comments.py  0005_alter_profile_user_patronymic_likes.py  0006_profile_image.py  0007_categories_post_categories.py  0008_alter_post_categories.py
posts/templates/posts/: post_list.html
